--- a/static/styles.css
+++ b/static/styles.css
@@ -10,20 +10,25 @@ body{
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  width: 100%;
+  border: 2px solid blue;
 }
-
 
 .App-header {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem;
+  width: 100%;
+  border: 2px solid pink;
 }
 
 .header-content {
   display: flex;
   align-items: center;
   flex-direction: column;
+  width: 100%;
+  border: 2px solid gray;
 }
 
 .title {
@@ -31,6 +36,7 @@ body{
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
+  width: 100%;
 }
 
 .title svg {
@@ -70,6 +76,43 @@ body{
   padding: 0.5rem;
   background-color: rgba(0, 0, 0, 0.6);
 }
+
+.test {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Creates 3 equal columns */
+  grid-gap: 10px; /* Adjust the gap between avatars */
+  list-style-type: none; /* Removes default list styles */
+  padding: 0; /* Removes default padding */
+  margin: 0; /* Removes default margin */
+  flex-wrap: wrap; /* Allows multiple rows */
+}
+
+.grid-container li {
+  display: flex; /* Ensures the avatar is centered vertically and horizontally */
+  justify-content: center;
+  align-items: center;
+  flex-basis: calc(33.33% - 10px); /* Adjust the width of each grid item */
+}
+
+.avatar {
+  width: 100px; /* Adjust the width and height according to your needs */
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 
 /* on the sides and top
 
