--- a/static/styles.css
+++ b/static/styles.css
@@ -34,6 +34,7 @@ body{
 .title {
   color: white;
   display: flex;
+  justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
   width: 100%;
@@ -77,11 +78,13 @@ body{
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-.test {
+.top-artists {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: white;
 }
+
 
 .grid-container {
   display: grid;
