--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 body{
-  margin: 0, 1.5rem, 0, 1.5rem;
+  margin: 0;
   background-color: black;
 }
 
@@ -20,15 +20,8 @@ body{
   align-items: center;
   padding: 1rem;
   width: 100%;
+  height: 100vh;
   border: 2px solid pink;
-}
-
-.header-content {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  border: 2px solid gray;
 }
 
 .title {
@@ -38,8 +31,9 @@ body{
   align-items: center;
   margin-bottom: 1rem;
   width: 100%;
+  position: relative;
+  z-index: 1;
 }
-
 .title svg {
   margin-left: 0.5rem;
 }
@@ -70,6 +64,7 @@ body{
 }
 
 .login-container {
+  bottom: -50;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -79,35 +74,51 @@ body{
 }
 
 .top-artists {
+  position: relative;
+  top: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
 }
 
+.search-bar {
+  position: absolute;
+  top: 150px;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .grid-container {
+  top: 100px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Creates 3 equal columns */
-  grid-gap: 10px; /* Adjust the gap between avatars */
-  list-style-type: none; /* Removes default list styles */
-  padding: 0; /* Removes default padding */
-  margin: 0; /* Removes default margin */
-  flex-wrap: wrap; /* Allows multiple rows */
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  flex-wrap: wrap;
 }
 
 .grid-container li {
-  display: flex; /* Ensures the avatar is centered vertically and horizontally */
+  display: flex;
   justify-content: center;
   align-items: center;
-  flex-basis: calc(33.33% - 10px); /* Adjust the width of each grid item */
+  flex-basis: calc(33.33% - 10px);
 }
 
 .avatar {
-  width: 100px; /* Adjust the width and height according to your needs */
+  width: 100px;
   height: 100px;
   border-radius: 50%;
   overflow: hidden;
+  position: relative;
 }
 
 .avatar img {
@@ -115,6 +126,20 @@ body{
   height: 100%;
   object-fit: cover;
 }
+
+.avatar:hover::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 5px solid green;
+  box-sizing: border-box;
+  pointer-events: none;
+}
+
 
 
 /* on the sides and top
