--- a/static/styles.css
+++ b/static/styles.css
@@ -23,14 +23,13 @@ h1{
 }
 
 .App {
-  background-color: black;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
 }
 
 .App-header {
@@ -40,7 +39,7 @@ h1{
   padding: 1rem;
   width: 100%;
   height: 100vh;
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
 }
 
 .title {
@@ -71,7 +70,6 @@ h1{
   align-items: center;
   border-radius: 8px;
   padding: 0.5rem;
-  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .StyledLogoutButton {
@@ -94,7 +92,6 @@ h1{
   align-items: center;
   border-radius: 8px;
   padding: 0.5rem;
-  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .top-artists {
@@ -159,7 +156,7 @@ h1{
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  border: 5px solid green;
+  /* border: 5px solid green; */
   box-sizing: border-box;
   pointer-events: none;
 }
