--- a/static/styles.css
+++ b/static/styles.css
@@ -49,19 +49,6 @@ header {
   box-sizing: border-box;
 }
 
-/*
-.App {
-  background-color: black;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  border: 2px solid blue;
-}
-*/
-
 .title {
   color: white;
   display: flex;
@@ -236,32 +223,31 @@ header {
   background-color: #1DB954;
 }
 
-.prompt-Container{
-  display:flex;
+.prompt-container {
+  display: flex;
   width: 100%;
   height: auto;
   justify-content: center;
   flex-direction: column;
-  align-items:center;
-
+  align-items: center;
 }
 
-.prompt-Element{
+.prompt-element {
   display: flex;
   justify-content: center;
   flex-direction: row;
 }
 
-.messages{
-  display:flex;
+.messages {
+  display: flex;
   width: 100%;
   height: auto;
   justify-content: center;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
 }
 
-.chatgptMessage{
+.chatgpt-message {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -271,15 +257,14 @@ header {
   border: 1px solid white;
 }
 
-.userMessage{
+.user-message {
   width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   color: white;
   background-color: blue;
-  border: 1px solid blue
-
+  border: 1px solid blue;
 }
 
 /* PlaylistOptions Styling */
@@ -425,6 +410,9 @@ header {
   padding: 1rem;
   padding-top: 2rem;
   padding-left: 0;
+  -webkit-mask: linear-gradient(#000, #0000);
+  mask: linear-gradient(#000, #0000);
+  /* mix-blend-mode: hard-light; */
 }
 
 .pl-thumb-tracks div{
@@ -501,6 +489,8 @@ header {
   border-radius: 50px;
 }
 
+/*
+
 .track-artist{
   color: gold;
 }
@@ -541,4 +531,24 @@ header {
 .track-lineitem:nth-child(9){
   opacity: 0.02;
   margin-bottom: -.15rem;
+} 
+*/
+.track-list {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.track-item {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+}
+
+.track-item input {
+  margin-right: 0.5rem;
+}
+
+.track-item span {
+  color: white;
 }
