--- a/static/styles.css
+++ b/static/styles.css
@@ -30,6 +30,10 @@ h1{
   font-weight: 400;
 }
 
+ul{
+  list-style: none;
+}
+
 .App {
   /* Add the following property */
   display: flex;
@@ -459,7 +463,7 @@ header {
 
 .disc-thumb-stats-container{
   background-color: gold;
-  color: black;
+  /* color: black; */
 }
 
 .pl-thumb-user-container{
@@ -473,20 +477,11 @@ header {
   align-items: center;
   justify-content: flex-end;
   flex: 1;
-  margin-right: 1rem;
-  font-size: .9rem;
+  margin-right: 1.5rem;
 }
 
-.pl-thumb-ellipsis-container a{
+.pl-thumb-ellipsis-container, .dist-thumb-ellipsis-container a{
   color: white
-}
-
-.pl-thumb-ellipsis-container a:hover{
-  color: black
-}
-
-.dist-thumb-ellipsis-container a{
-  color: black;
 }
 
 .pl-thumb-user-img{
@@ -516,32 +511,45 @@ header {
   font-size: .75rem;
 }
 
-/* .track-lineitem:nth-child(2){
-  opacity: 0.8;
+.ellipsis-dropdown > li {
+  float: right;
 }
 
-.track-lineitem:nth-child(3){
-  opacity: 0.65;
+.ellipsis-dropdown button {
+  border: 0;
+  background: transparent;
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: white;
 }
 
-.track-lineitem:nth-child(4){
-  opacity: 0.5;
+.ellipsis-dropdown button:hover,
+.ellipsis-dropdown button:focus {
+  outline: 0;
+  text-decoration: underline;
 }
 
-.track-lineitem:nth-child(5){
-  opacity: 0.4;
+.ellipsis-dropdown-content {
+  display: none;
+  position: absolute;
+  cursor: pointer;
 }
 
-.track-lineitem:nth-child(6){
-  opacity: 0.25;
+.ellipsis-dropdown button:focus + .ellipsis-dropdown-content,
+.ellipsis-dropdown-content:hover {
+  display: block;
 }
-.track-lineitem:nth-child(7){
-  opacity: 0.15;
+
+.ellipsis-dropdown-content li{
+  right: 0;
+  background-color: black;
+  padding: .5rem;
 }
-.track-lineitem:nth-child(8){
-  opacity: 0.05;
+
+.ellipsis-dropdown-content li:hover{
+  background-color: var(--spotifyGreen)
 }
-.track-lineitem:nth-child(9){
-  opacity: 0.02;
-  margin-bottom: -.15rem;
-} */
+
+.ellipsis-dropdown-content a{
+  color: white;
+}
