--- a/static/styles.css
+++ b/static/styles.css
@@ -12,6 +12,7 @@
 
 body{
   margin: 0;
+  margin-top: 1rem;
   background-color: #121212;
   color: white;
   font-family: 'Montserrat';
@@ -31,6 +32,10 @@ h1{
 }
 
 ul{
+  list-style: none;
+}
+
+li{
   list-style: none;
 }
 
@@ -65,13 +70,18 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-left: 1rem;
   width: 100%;
   position: relative;
   z-index: 1;
 }
 .title svg {
   margin-left: 0.5rem;
+}
+
+#spotify-logo{
+  margin-left: .5rem;
+  color: var(--spotifyGreen)
 }
 
 .StyledLoginButton {
@@ -188,9 +198,10 @@ header {
 
 .nav {
   display: flex;
-  align-items: center;
+  justify-content: space-around;
+  /* align-items: center;
   margin-left: auto;
-  width: inherit;
+  width: inherit; */
 }
 
 
@@ -214,9 +225,10 @@ header {
   position: absolute;
   background-color: black;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
   margin-left: 10px;
   z-index: 1;
+  border-radius: 5px;
 }
 
 .dropdown.visible .dropdown-content {
@@ -228,6 +240,16 @@ header {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+}
+
+.dropdown-content a:first-child{
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.dropdown-content a:last-child{
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .dropdown-content a:hover {
@@ -363,7 +385,7 @@ header {
 }
 
 .pl-thumb{
-  width: 70%;
+  width: 75%;
   margin-bottom: 3rem;
   border-radius: 5px;
   /* box-shadow: 0 0 25px rgba(29, 185, 84, 0.2); */
@@ -404,12 +426,6 @@ header {
   border-top-left-radius: 5px;
   background-color: #121212;
 }
-
-/* .pl-thumb-img{
-  display: flex;
-  flex: 1;
-  padding: 1rem; 
-} */
 
 .pl-thumb-img img{
   max-width: 100%;
@@ -524,6 +540,7 @@ header {
   display: none;
   position: absolute;
   cursor: pointer;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
 }
 
 .ellipsis-dropdown button:focus + .ellipsis-dropdown-content,
@@ -535,9 +552,19 @@ header {
   right: 0;
   background-color: black;
   padding: .5rem;
-  border-radius: 5px;
   font-size: .85rem;
 }
+
+.ellipsis-dropdown-content li:first-child{
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.ellipsis-dropdown-content li:last-child{
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
 
 .ellipsis-dropdown-content li:hover{
   background-color: var(--spotifyGreen)
