--- a/static/styles.css
+++ b/static/styles.css
@@ -305,35 +305,42 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  width: 100%;
 }
 
 .options-title {
-  margin-bottom: 30px;
-  font-size: 32px;
+  margin-top: .5rem;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  text-shadow: 1px 1px 4px rgb(5, 5, 5);
 }
 
 .option {
   background-color: #242424;
   border-radius: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 1.5rem;
   padding: 20px;
-  width: 80%;
+  width: 75%;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 .option:hover {
-  transform: scale(1.05);
+  transform: scale(1.01);
   box-shadow: 0 0 15px rgba(29, 185, 84, 0.3);
+  cursor: pointer;
 }
 
 .option h3 {
-  margin-bottom: 10px;
+  margin-bottom: .35rem;
   color: var(--spotifyGreen);
 }
 
-.option p {
+.pl-type-desc {
   color: #B3B3B3;
+  font-size: .9rem;
 }
+
+
 /* PlaylistOptions Styling Ends here */
 
 /* Playlist/Discover Toggle Styling */
@@ -377,18 +384,19 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 75%;
 }
 
 #pl-discover-toggle-container{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 2.5rem;
 }
 
 .pl-thumb{
   width: 75%;
   margin-bottom: 3rem;
   border-radius: 5px;
-  /* box-shadow: 0 0 25px rgba(29, 185, 84, 0.2); */
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 .pl-thumb-name, .disc-thumb-name{
@@ -400,7 +408,7 @@ header {
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
   color: var(--spotifyGreen);
-  text-shadow: 1px 1px 3px rgb(0, 0, 0);
+  text-shadow: 1px 1px 4px rgb(5, 5, 5);
 }
 
 .disc-thumb-name{
@@ -549,7 +557,6 @@ header {
 }
 
 .ellipsis-dropdown-content li{
-  right: 0;
   background-color: black;
   padding: .5rem;
   font-size: .85rem;
@@ -596,3 +603,9 @@ header {
 }
 
 
+/* PROFILE COMPONENTS*/
+
+.prof-container{
+  /* border: 1px solid blue; */
+  width: 75%;
+}
