--- a/static/styles.css
+++ b/static/styles.css
@@ -66,6 +66,8 @@ header {
 
 
 .title {
+  font-family: 'Lobster';
+  font-size: 4rem;
   color: white;
   display: flex;
   justify-content: center;
@@ -192,7 +194,9 @@ header {
 
 /* PROFILE COMPONENT */
 .prof-title{
+  font-weight: 500;
   color: var(--spotifyGreen);
+  margin-right: .25rem;
 }
 
 
@@ -218,6 +222,7 @@ header {
   border-radius: 8px;
   border: none;
   cursor: pointer;
+  margin-top: .5rem;
 }
 
 .dropdown-content {
@@ -229,6 +234,7 @@ header {
   margin-left: 10px;
   z-index: 1;
   border-radius: 5px;
+  margin-top: .75rem;
 }
 
 .dropdown.visible .dropdown-content {
@@ -245,6 +251,14 @@ header {
 .dropdown-content a:first-child{
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+}
+
+.dropdown-content a:nth-child(5){
+  color: gold;
+}
+
+.dropdown-content a:nth-child(5):hover{
+  color: white;
 }
 
 .dropdown-content a:last-child{
@@ -411,6 +425,17 @@ header {
   text-shadow: 1px 1px 4px rgb(5, 5, 5);
 }
 
+.pl-thumb-name a{
+  color: var(--spotifyGreen);
+  border-bottom: 1px solid transparent
+}
+
+.pl-thumb-name a:hover{
+  color: white;
+  border-bottom: 1px dotted var(--spotifyGreen);
+  transition: 0.35s
+}
+
 .disc-thumb-name{
   color: gold;
 }
@@ -438,6 +463,7 @@ header {
 .pl-thumb-img img{
   max-width: 100%;
   border-radius: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
 }
 
 .pl-thumb-tracks{
@@ -472,7 +498,7 @@ header {
 }
 
 .pl-prompt{
-  background-color: rgb(60, 60, 60);
+  background-color: #3c3c3c;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   padding: 1rem;
@@ -606,6 +632,120 @@ header {
 /* PROFILE COMPONENTS*/
 
 .prof-container{
-  /* border: 1px solid blue; */
+  border: 1px solid blue;
   width: 75%;
 }
+
+.profstats-container{
+  display: flex;
+  border-left: 4px solid #242424;
+  border-right: 4px solid #242424;
+  background: #242424;
+}
+
+.profstats{
+  flex: 2;
+  border-top-left-radius: 5px;
+  background-color: #121212;
+  padding: 1rem;
+}
+
+.profstats div{
+  margin-bottom: .65rem;
+}
+
+.prof-img{
+  display: flex;
+  flex: 1;
+  /* padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 1rem; */
+  justify-content: center;
+  border-top-right-radius: 5px;
+  background-color: #121212;
+  /* border: 1px solid blue; */
+  padding: 1.5rem;
+}
+
+.prof-img img{
+  max-width: 100%;
+  border-radius: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+}
+
+.prof-bottom-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #242424;
+  height: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.discoverable-container{
+  display: flex;
+  margin-top: 0;
+}
+
+.discoverable-title{
+  display: flex;
+  align-items: flex-end;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: white;
+  /* text-shadow: 1px 1px 1px rgb(27, 111, 51); */
+}
+
+.discoverable-switch-container{
+  display: flex;
+  /* flex: 1; */
+  padding-left: .5rem;
+  align-items: flex-end;
+}
+
+.ios-switch{
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+}
+
+.prof-unlock-pro{
+  margin-left: .25rem;
+  margin-right: .25rem;
+}
+
+.prof-unlock-pro a{
+  color: gold;
+}
+
+.prof-unlock-pro a:hover{
+  color: white;
+  border-bottom: 1px dotted gold;
+}
+
+.prof-prompt{
+  display: flex;
+  justify-content: center;
+  background-color: #3c3c3c;
+  color: black;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding: 1rem;
+  width: 100%;
+}
+
+.prof-prompt-container{
+  /* padding: 1rem; */
+  background-color: #242424;
+  border-left: 5px solid #242424;
+  border-right: 5px solid #242424;
+}
+
+.prof-edit-info{
+  font-size: .75rem;
+}
+
+.prof-edit-info a:hover{
+  border-bottom: 1px dotted var(--spotifyGreen)
+}
+
