--- a/static/styles.css
+++ b/static/styles.css
@@ -13,7 +13,9 @@
 body{
   margin: 0;
   margin-top: 1rem;
-  background-color: #121212;
+  background-image: url("/static/wavesbg2.jpeg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: white;
   font-family: 'Montserrat';
 }
@@ -326,7 +328,7 @@ header {
   margin-top: .5rem;
   margin-bottom: 2rem;
   font-size: 2rem;
-  text-shadow: 1px 1px 4px rgb(5, 5, 5);
+  text-shadow: 1px 1px 10px rgb(5, 5, 5);
 }
 
 .option {
@@ -335,12 +337,12 @@ header {
   margin-bottom: 1.5rem;
   padding: 20px;
   width: 75%;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 10px rgba(0, 0, 0, 0.5);
 }
 
 .option:hover {
   transform: scale(1.01);
-  box-shadow: 0 0 15px rgba(29, 185, 84, 0.3);
+  /* box-shadow: 0 0 15px rgba(29, 185, 84, 0.3); */
   cursor: pointer;
 }
 
@@ -404,7 +406,7 @@ header {
   width: 75%;
   margin-bottom: 3rem;
   border-radius: 5px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 10px rgba(0, 0, 0, 0.5);
 }
 
 .pl-thumb-name, .disc-thumb-name{
@@ -448,7 +450,7 @@ header {
   padding-left: 2rem;
   padding-right: 2rem;
   padding-top: 2rem;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
   justify-content: center;
   border-top-left-radius: 5px;
   background-color: #121212;
