--- a/static/styles.css
+++ b/static/styles.css
@@ -16,6 +16,7 @@ body{
   background-image: url("/static/wavesbg2.jpeg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-color: #121212;
   color: white;
   font-family: 'Montserrat';
 }
@@ -364,6 +365,7 @@ header {
   width: 200px;
   border-radius: 10px;
   overflow: hidden;
+  box-shadow: 0px 8px 16px 8px rgba(0, 0, 0, 0.4);
 }
 
 .toggle-option {
@@ -824,6 +826,10 @@ header {
   color: #000;
 }
 
+.playlist-button{
+  box-shadow: 0px 8px 16px 8px rgba(0, 0, 0, 0.4);
+}
+
 .track-list {
   list-style-type: none;
   padding: 0;
@@ -849,7 +855,7 @@ header {
 
 .playlist-button-container {
   position: fixed;
-  bottom: 20px;
+  bottom: 5%;
   width: 100%;
   display: flex;
   justify-content: center;
