--- a/static/styles.css
+++ b/static/styles.css
@@ -1122,3 +1122,78 @@ header {
 
 
 /* Loader.js Component end */
+
+
+/* Track list lay out in Prompt.js file */
+.playlist-container {
+  background-color: inherit;
+  padding: 20px;
+  width: 75%;
+  margin-top: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.playlist-header {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.playlist-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background-color: #242424;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.playlist-item:hover {
+  transform: scale(1.01);
+  box-shadow: 0 0 15px rgba(29, 185, 84, 0.3);
+  cursor: pointer;
+}
+
+.playlist-item-image {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.playlist-item-info {
+  flex: 1;
+}
+
+.playlist-item-row {
+  display: flex;
+  align-items: center;
+}
+
+.playlist-item-title {
+  font-weight: bold;
+}
+
+.playlist-item-artist {
+  color: #777;
+}
+
+.playlist-checkmark {
+  margin-left: auto;
+}
+
+.playlist-back-button {
+  background-color: #fff;
+  color: #333;
+  border: none;
+  padding: 10px 15px;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+
+/* Track List end */
+
