--- a/static/styles.css
+++ b/static/styles.css
@@ -1242,3 +1242,48 @@ header {
 }
 
 /* Show one track in Prompt.js END */
+
+/* Error modal styling */
+
+.modalBackground {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+.modalContainer {
+  width: 80%;
+  max-width: 600px;
+  background: #121212;
+  padding: 30px;
+  box-sizing: border-box;
+  color: #1DB954;
+  border-radius: 15px;
+  box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.5);
+}
+
+.titleBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button {
+  background: #1DB954;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 50px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+/* Error modal styling end */
