--- a/static/styles.css
+++ b/static/styles.css
@@ -622,6 +622,13 @@ header {
   box-shadow: 0 0 .5rem .5rem rgba(0, 0, 0, 0.15);
 }
 
+.prof-thumb-user-img{
+  width: 50px;
+  border-radius: 50px;
+  box-shadow: 0 0 .5rem .5rem rgba(0, 0, 0, 0.15);
+  margin-right: 1rem;
+}
+
 .track-artist{
   color: var(--spotifyGreen);
 }
