Create Playlist successfully redirects to single Playlist component; playlist length increased to 10

--- a/static/styles.css
+++ b/static/styles.css
@@ -436,6 +436,14 @@ header {
   width: 75%;
 }
 
+#successfulpl-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 75%;
+  margin-top: 3rem;
+}
+
 #new-pl-container{
   display: flex;
   flex-direction: column;
