--- a/static/styles.css
+++ b/static/styles.css
@@ -412,20 +412,22 @@ header {
 .toggle-button {
   display: flex;
   justify-content: space-between;
-  width: 200px;
+  width: 400px;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0px 8px 16px 8px rgba(0, 0, 0, 0.4);
+
 }
 
 .toggle-option {
   flex-grow: 1;
   padding: 10px 20px;
-  border: none;
+  border: 2px solid var(--spotifyGreen);
   background-color: #242424;
   color: #B3B3B3;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  font-family: 'Montserrat';
+  font-size: .9rem;
 }
 
 .toggle-option.selected {
@@ -458,7 +460,7 @@ header {
   flex-direction: column;
   align-items: center;
   width: 75%;
-  margin-top: 3rem;
+  margin-top: 1.7rem;
 }
 
 #new-pl-container{
@@ -469,8 +471,8 @@ header {
 }
 
 #pl-discover-toggle-container{
-  margin-top: 1rem;
-  margin-bottom: 2.5rem;
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .pl-thumb{
@@ -535,6 +537,7 @@ header {
   justify-content: center;
   border-top-left-radius: 5px;
   background-color: #121212;
+  opacity: 90%;
 }
 
 .pl-thumb-img img, .disc-thumb-img img{
@@ -589,7 +592,7 @@ header {
 
 .pl-thumb-ellipsis-container{
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-end;
   flex: 1;
   margin-right: 1.5rem;
@@ -727,14 +730,22 @@ header {
 .ellipsis-dropdown-content li:last-child{
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  color: red;
 }
 
 .ellipsis-dropdown-content a{
   color: red;
 }
 
-.ellipsis-dropdown-content li:last-child:hover{
+/* .ellipsis-dropdown-content li:last-child:hover{
+  background-color: red;
+  color: black;
+} */
+
+#remove-pro{
+  color: red;
+}
+
+#remove-pro:hover{
   background-color: red;
   color: black;
 }
@@ -855,6 +866,12 @@ header {
   margin-left: .25rem;
   margin-right: .25rem;
   color: gold;
+}
+
+.prof-free{
+  margin-left: .25rem;
+  margin-right: .25rem;
+  color: lightgray;
 }
 
 .prof-unlock-pro a{
@@ -1001,15 +1018,17 @@ header {
   color: white;
   text-decoration: none;
   font-size: 20px;
-  border-radius: 50px;
+  border-radius: 10px;
   transition: background-color 0.5s ease;
-  width: 30vw;
+  width: 400px;
+  /* width: 30vw; */
   text-align: center;
 }
 
 .playlist-button:hover {
   background-color: #1ED760;
 }
+
 /* Create Playlist Button end */
 
 /* Playlist Styling */
@@ -1334,7 +1353,7 @@ header {
   align-items: center;
 }
 
-button {
+/* button {
   background: #1DB954;
   border: none;
   color: white;
@@ -1343,6 +1362,6 @@ button {
   cursor: pointer;
   font-weight: bold;
   margin-top: 20px;
-}
+} */
 
 /* Error modal styling end */
