--- a/static/styles.css
+++ b/static/styles.css
@@ -1351,7 +1351,7 @@ header {
   align-items: center;
 }
 
-/* button {
+.modal-button {
   background: #1DB954;
   border: none;
   color: white;
@@ -1360,6 +1360,6 @@ header {
   cursor: pointer;
   font-weight: bold;
   margin-top: 20px;
-} */
+}
 
 /* Error modal styling end */
