--- a/static/styles.css
+++ b/static/styles.css
@@ -80,6 +80,7 @@ header {
   position: relative;
   z-index: 1;
 }
+
 .title svg {
   margin-left: 0.5rem;
 }
@@ -413,7 +414,6 @@ header {
   width: 400px;
   border-radius: 10px;
   overflow: hidden;
-
 }
 
 .toggle-option {
@@ -461,6 +461,14 @@ header {
   margin-top: 1.7rem;
 }
 
+#successful-only{
+  margin-bottom: 2.5rem;
+}
+
+#view-all{
+  margin-bottom: 2.5rem;
+}
+
 #new-pl-container{
   display: flex;
   flex-direction: column;
@@ -480,6 +488,10 @@ header {
   box-shadow: 0px 8px 16px 10px rgba(0, 0, 0, 0.5);
 }
 
+.pl-thumb:last-child{
+  margin-bottom: 8rem;
+}
+
 .pl-thumb-name, .disc-thumb-name{
   display: flex;
   justify-content: center;
@@ -490,6 +502,9 @@ header {
   border-top-left-radius: 5px;
   color: var(--spotifyGreen);
   text-shadow: 1px 1px 4px rgb(5, 5, 5);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .pl-thumb-name a{
@@ -503,19 +518,18 @@ header {
   transition: 0.35s
 }
 
-.disc-thumb-name{
+/* .disc-thumb-name{
   color: gold;
 }
 
 .disc-thumb-name a{
   color: gold
-  /* border-bottom: 1px solid transparent */
 }
 
 .disc-thumb-name a:hover{
   color: white;
   transition: 0.35s
-}
+} */
 
 .pl-thumb-data-container{
   display: flex;
@@ -525,7 +539,7 @@ header {
   background: linear-gradient(180deg, rgba(36,36,36,1) 0%, rgba(18,18,18,1) 3%);
 }
 
-.pl-thumb-img, .disc-thumb-img{
+.pl-thumb-img{
   display: flex;
   flex: 1;
   padding-left: 2rem;
@@ -538,16 +552,27 @@ header {
   opacity: 90%;
 }
 
-.pl-thumb-img img, .disc-thumb-img img{
+.pl-thumb-img img{
   max-width: 100%;
   border-radius: 5px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
 }
 
+.separator-container{
+  display: none;
+  justify-content: center;
+}
+
+.separator{
+  width: 85%;
+  border: 1px solid #242424;
+}
+
 .pl-thumb-tracks{
-  flex: 4;
+  flex: 3.5;
   padding: 1rem;
   padding-top: 2rem;
+  padding-right: 1.75rem;
   padding-left: 0;
   -webkit-mask: linear-gradient(#000 10%, #0000 85%);
   mask: linear-gradient(#000, #0000);
@@ -558,6 +583,9 @@ header {
 
 .pl-thumb-tracks div{
   margin-bottom: .25rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .pl-thumb-prompt-container{
@@ -657,10 +685,6 @@ header {
 
 .track-artist{
   color: var(--spotifyGreen);
-}
-
-.disc-track-artist{
-  color: gold;
 }
 
 .prompt-title{
@@ -1363,3 +1387,172 @@ header {
 }
 
 /* Error modal styling end */
+
+
+/* RE-SIZING */
+
+@media screen and (max-width: 1450px) {
+
+  .pl-thumb-name{
+    font-size: 2.25rem;
+  }
+
+}
+
+@media screen and (max-width: 1300px) {
+
+  .pl-thumb{
+    width: 60%;
+  }
+
+  #pl-container, #successfulpl-container{
+    width: 100%;
+  }
+
+  .pl-thumb-name{
+    font-size: 2rem;
+  }
+
+  .pl-thumb-tracks div{
+    font-size: .8rem;
+  }
+
+}
+
+@media screen and (max-width: 1225px) {
+
+  .pl-thumb{
+    width: 67.5%;
+  }
+
+}
+
+@media screen and (max-width: 1150px) {
+
+  .pl-thumb{
+    width: 75%;
+  }
+
+  .pl-thumb-img{
+    flex: 1;
+  }
+
+  .pl-thumb-tracks{
+    flex: 3
+  }
+
+}
+
+@media screen and (max-width: 915px) {
+  .pl-thumb{
+    width: 85%;
+  }
+  
+}
+
+@media screen and (max-width: 800px) {
+  
+  .pl-thumb-name{
+    font-size: 2rem;
+  }
+  
+}
+
+@media screen and (max-width: 770px) {
+  
+  .pl-thumb-data-container{
+    flex-direction: column;
+  }
+
+  .pl-thumb-tracks{
+    flex: 1;
+    padding-left: 1.75rem;
+    padding-bottom: 2rem;
+  }
+
+  .pl-thumb-tracks div{
+    font-size: .75rem;
+  }
+
+  .separator-container{
+    display: flex;
+  }
+
+  .pl-thumb-name{
+    font-size: 1.75rem;
+  }
+  
+  .profstats div{
+    font-size: .9rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .title{
+    font-size: 3.15rem;
+  }
+  .pl-thumb-name{
+    font-size: 1.5rem;
+  }
+
+  .toggle-button {
+    width: 300px;
+  }
+
+  .playlist-button {
+    width: 300px;
+  }
+
+  .discoverable-title{
+    font-size: .9rem;
+  }
+  
+}
+
+@media screen and (max-width: 570px) {
+
+  .pl-thumb-name{
+    font-size: 1.25rem;
+  }
+
+  .pl-thumb-prompt-content{
+    font-size: .7rem;
+  }
+
+  .profstats div{
+    font-size: .8rem;
+  }
+
+  .discoverable-title{
+    font-size: .8rem;
+  }
+  
+}
+
+@media screen and (max-width: 500px) {
+  .title{
+    font-size: 3.15rem;
+  }
+
+  .pl-thumb-name{
+    font-size: 1.1rem;
+  }
+
+  .pl-thumb-tracks div{
+    font-size: .7rem;
+    max-width: 300px;
+  }
+
+  .pl-thumb-user-name, .disc-thumb-user-name{
+    font-size: .8rem;
+  }
+
+  .profstats div{
+    font-size: .7rem;
+  }
+
+  .discoverable-title{
+    font-size: .7rem;
+  }
+  
+}
