--- a/static/styles.css
+++ b/static/styles.css
@@ -289,13 +289,22 @@ header {
   border-bottom-right-radius: 5px;
 }
 
+#prompt-outer-container{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  /* margin-top: 1.75rem; */
+}
+
 .prompt-container {
   display: flex;
-  width: 100%;
+  width: 80%;
   height: auto;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+
+  border: 1px solid blue;
 }
 
 .prompt-element {
@@ -362,7 +371,7 @@ header {
   border-radius: 10px;
   margin-bottom: 0.5rem;
   padding: 20px;
-  width: 75%;
+  width: 100%;
   box-shadow: 0px 8px 16px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -383,12 +392,27 @@ header {
   color: var(--spotifyGreen);
 }
 
-.pl-type-desc {
+.prompt-options {
+  background-color: #242424;
+  border-radius: 10px;
+  margin-bottom: 0.5rem;
+  padding: 20px;
+  width: 97.5%;
   color: #B3B3B3;
   font-size: .9rem;
 }
 
-.options.with-arrow {
+.prompt-options:last-child {
+  margin-bottom: .75rem;
+}
+
+.prompt-options:hover{
+  cursor: pointer;
+  transform: scale(1.01);
+  color: gold
+}
+
+.options.with-arrow, .prompt-options.with-arrow {
   position: relative;
 }
 
@@ -820,6 +844,7 @@ header {
 .profstats{
   flex: 2;
   border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   background-color: #121212;
   padding: 1rem;
   padding-bottom: .5rem;
@@ -827,6 +852,13 @@ header {
 
 .profstats div{
   margin-bottom: .65rem;
+}
+
+#create-subheader{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 1rem;
 }
 
 .prof-img{
@@ -847,6 +879,27 @@ header {
   max-width: 100%;
   border-radius: 5px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+}
+
+.example-prompts-title-container{
+  /* border: 1px solid blue; */
+  width: 100%;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+  color: var(--spotifyGreen);
+}
+
+#create-example-prompts-container{
+  width: 100%;
+}
+
+#create-example-prompts{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: #121212;
 }
 
 .prof-bottom-container{
@@ -922,6 +975,16 @@ header {
   border-bottom-right-radius: 5px;
   padding: 1rem;
   width: 100%;
+}
+
+#prompt-input-container{
+  padding: 1.5rem;
+}
+
+#create-example-prompts-window{
+  background-color: #121212;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .prof-prompt-container{
