--- a/static/styles.css
+++ b/static/styles.css
@@ -351,10 +351,20 @@ header {
 }
 
 .options-title {
-  margin-top: .5rem;
+  margin-top: 1.75rem;
   margin-bottom: 2rem;
   font-size: 2rem;
   text-shadow: 1px 1px 10px rgb(5, 5, 5);
+}
+
+.pro-option {
+  background-color: #242424;
+  border-radius: 10px;
+  margin-bottom: 1.5rem;
+  padding: 20px;
+  width: 75%;
+  box-shadow: 0px 8px 16px 10px rgba(0, 0, 0, 0.5);
+  font-size: .9rem;
 }
 
 .option {
@@ -387,7 +397,7 @@ header {
   cursor: pointer;
 }
 
-.option h3 {
+.option h3, .pro-option h3 {
   margin-bottom: .35rem;
   color: var(--spotifyGreen);
 }
@@ -884,6 +894,7 @@ header {
 .example-prompts-title-container{
   /* border: 1px solid blue; */
   width: 100%;
+  margin-top: 1rem;
   margin-bottom: 1rem;
   display: flex;
   justify-content: center;
@@ -977,10 +988,6 @@ header {
   width: 100%;
 }
 
-#prompt-input-container{
-  padding: 1.5rem;
-}
-
 #create-example-prompts-window{
   background-color: #121212;
   border-top-left-radius: 5px;
@@ -1002,22 +1009,54 @@ header {
   border-bottom: 1px dotted var(--spotifyGreen)
 }
 
+#prompt-input-container{
+  padding: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* Prompt input styles */
 .prompt-input {
-  width: 300px;
+  width: 70%;
   flex-grow: 1;
-  margin-right: 10px;
   padding: 10px;
   border-radius: 5px;
   border: none;
   background-color: #404040;
   color: #fff;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .prompt-input:focus {
   outline: none;
   border: 1px solid var(--spotifyGreen);
   box-shadow: 0 0 10px var(--spotifyGreen);
+}
+
+.create-playlist-button {
+  display: inline-block;
+  white-space: normal;
+  background-color: var(--spotifyGreen);
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  border: none;
+  margin-left: .75rem;
+  margin-right: .75rem;
+  cursor: pointer;
+  width: 26%;
+  word-wrap: break-word;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.create-playlist-button:hover{
+  background-color: gold;
+  color: black;
+}
+
+.create-playlist-button:active{
+  background-color: white;
 }
 
 .prompt-container {
@@ -1052,6 +1091,7 @@ header {
   padding: 5px 10px;
   cursor: pointer;
   border-radius: 4px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .styled-logout-button:hover,
@@ -1062,6 +1102,10 @@ header {
 
 .playlist-button{
   box-shadow: 0px 8px 16px 8px rgba(0, 0, 0, 0.4);
+}
+
+#subscribe-now{
+  margin-top: 1.5rem;
 }
 
 .track-list {
@@ -1104,14 +1148,20 @@ header {
   text-decoration: none;
   font-size: 20px;
   border-radius: 10px;
-  transition: background-color 0.5s ease;
+  /* transition: background-color 0.5s ease; */
   width: 400px;
   /* width: 30vw; */
   text-align: center;
+  border: 0;
 }
 
 .playlist-button:hover {
-  background-color: #1ED760;
+  background-color: gold;
+  border: 0;
+}
+
+.playlist-button:active{
+  background-color: white;
 }
 
 /* Create Playlist Button end */
@@ -1472,6 +1522,10 @@ header {
     width: 100%;
   }
 
+  .pro-option{
+    width: 65%
+  }
+
   .pl-thumb-name{
     font-size: 2rem;
   }
@@ -1504,19 +1558,39 @@ header {
     flex: 3
   }
 
+  .pro-option{
+    width: 70%;
+  }
+
 }
 
 @media screen and (max-width: 915px) {
   .pl-thumb{
     width: 85%;
   }
+
+  .pro-option{
+    width: 75%;
+  }
+
+  .options-title{
+    font-size: 1.75rem;
+  }
   
 }
 
 @media screen and (max-width: 800px) {
+
+  .pro-option {
+    font-size: .85rem;
+  }
   
   .pl-thumb-name{
     font-size: 2rem;
+  }
+  
+  .pro-option{
+    width: 80%;
   }
   
 }
@@ -1569,7 +1643,35 @@ header {
   .discoverable-title{
     font-size: .9rem;
   }
+
+  .example-prompts-title-container{
+    font-size: 1.25rem;
+  }
+
+  .prompt-options{
+    font-size: .8rem;
+  }
+
+  .pro-option{
+    width: 85%;
+  }
+
+  .options-title{
+    font-size: 1.5rem;
+  }
   
+}
+
+@media screen and (max-width: 600px) {
+
+.prompt-input {
+  width: 60%;
+}
+
+.create-playlist-button {
+  width: 33%;
+}
+
 }
 
 @media screen and (max-width: 570px) {
@@ -1589,6 +1691,14 @@ header {
   .discoverable-title{
     font-size: .8rem;
   }
+
+  .options-title{
+    font-size: 1.25rem;
+  }
+
+  .pro-option{
+    font-size: .75rem;
+  }
   
 }
 
@@ -1597,9 +1707,9 @@ header {
     font-size: 3.15rem;
   }
 
-  .pl-thumb-name{
+  /* .pl-thumb-name{
     font-size: 1.1rem;
-  }
+  } */
 
   .pl-thumb-tracks div{
     font-size: .7rem;
@@ -1616,6 +1726,10 @@ header {
 
   .discoverable-title{
     font-size: .7rem;
+  }
+
+  .prompt-options{
+    font-size: .65rem;
   }
   
 }
